--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello from CodePipeline!</title>
+    <title>New message from CodePipeline!</title>
 </head>
 <body>
-    <h1>Hello from CodePipeline!</h1>
+    <h1>New message from CodePipeline!</h1>
 </body>
 </html>
